--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -1,30 +1,18 @@
+/* Write your CSS code here */
 .nav-header {
   display: flex;
   justify-content: center;
-  border-bottom: 1px solid rgb(243, 243, 243);
-}
-
-@media screen and (max-width: 767px) {
-  .nav-header {
-    flex-direction: column;
-    align-items: center;
-    border-bottom-style: none;
-  }
 }
 
 .nav-content {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 90%;
+  width: 85%;
   max-width: 1110px;
   padding-top: 25px;
   padding-bottom: 25px;
-}
-@media screen and (max-width: 767px) {
-  .nav-content {
-    flex-direction: column;
-  }
+  padding-left: 15px;
 }
 
 .nav-bar-mobile-logo-container {
@@ -33,34 +21,20 @@
   width: 100%;
 }
 
-@media screen and (min-width: 768px) {
-  .nav-bar-mobile-logo-container {
-    display: none;
-  }
-}
-
-.nav-bar-large-container {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  width: 100%;
-  max-width: 1110px;
-}
-
-@media screen and (max-width: 767px) {
-  .nav-bar-large-container {
-    display: none;
-  }
-}
-
 .website-logo {
-  width: 110px;
+  width: 120px;
 }
 
-@media screen and (min-width: 768px) {
-  .website-logo {
-    width: 165px;
-  }
+.nav-mobile-btn {
+  border: none;
+  padding: 0px;
+  background: transparent;
+  cursor: pointer;
+  outline: none;
+}
+
+.nav-bar-img {
+  width: 24px;
 }
 
 .nav-menu {
@@ -74,52 +48,12 @@
   margin-bottom: 0px;
 }
 
-@media screen and (max-width: 767px) {
-  .nav-menu {
-    display: none;
-  }
-}
-.nav-menu-mobile {
-  width: 100%;
-}
-
-@media screen and (min-width: 768px) {
-  .nav-menu-mobile {
-    display: none;
-  }
-}
-
-.nav-menu-list-mobile {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  align-items: center;
-  height: 70px;
-  background-color: #e6f6ff;
-  flex: 1;
-  list-style-type: none;
-  margin-top: 0px;
-  margin-bottom: 0px;
-  padding: 0px;
-}
-
 .nav-menu-item {
   font-family: 'Roboto';
   margin: 10px;
   font-weight: 400;
   font-size: 16px;
-}
-
-.nav-link {
-  display: flex;
-  align-items: center;
-  text-decoration: none;
   color: #475569;
-}
-
-.nav-menu-item-mobile {
-  margin: 0px;
-  cursor: pointer;
 }
 
 .logout-desktop-btn {
@@ -136,46 +70,67 @@
   outline: none;
 }
 
+.nav-menu-mobile {
+  width: 100%;
+}
+
+.nav-menu-list-mobile {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  height: 70px;
+  background-color: #e6f6ff;
+  flex: 1;
+  list-style-type: none;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  padding: 0px;
+}
+
+.nav-menu-item-mobile {
+  margin: 0px;
+  cursor: pointer;
+}
+
 @media screen and (max-width: 767px) {
+  .nav-header {
+    flex-direction: column;
+  }
+
+  .nav-content {
+    flex-direction: column;
+    width: 100%;
+    padding-right: 15px;
+  }
+
+  .nav-bar-large-container {
+    display: none;
+  }
+
+  .nav-menu {
+    display: none;
+  }
+
   .logout-desktop-btn {
     display: none;
   }
 }
 
-.nav-mobile-btn {
-  border: none;
-  padding: 0px;
-  background: transparent;
-  cursor: pointer;
-  outline: none;
-}
-
 @media screen and (min-width: 768px) {
+  .nav-bar-mobile-logo-container {
+    display: none;
+  }
+
+  .website-logo {
+    width: 165px;
+  }
+
   .nav-mobile-btn {
     display: none;
   }
-}
 
-.nav-bar-img {
-  width: 24px;
-}
-
-.cart-count-badge {
-  background-color: #bfdbfe;
-  color: #0967d2;
-  font-family: 'Roboto';
-  font-size: 12px;
-  font-weight: 500;
-  border-radius: 50%;
-  padding-left: 5px;
-  padding-top: 2px;
-  padding-right: 5px;
-  padding-bottom: 2px;
-  margin-left: 8px;
-}
-
-@media screen and (min-width: 768px) {
-  .cart-count-badge {
-    background-color: #e6f6ff;
+  .nav-menu-mobile {
+    display: none;
   }
 }
