--- a/src/components/Home/index.css
+++ b/src/components/Home/index.css
@@ -1,3 +1,4 @@
+/* Write your CSS code here */
 .home-container {
   display: flex;
   flex-direction: column;
@@ -10,62 +11,23 @@
   max-width: 1110px;
 }
 
-@media screen and (min-width: 768px) {
-  .home-container {
-    flex-direction: row;
-    justify-content: space-between;
-    padding-top: 96px;
-  }
-}
-
 .home-content {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-@media screen and (min-width: 768px) {
-  .home-content {
-    align-items: flex-start;
-  }
+.home-heading {
+  font-family: 'Roboto';
+  font-weight: bold;
+  margin-top: 0px;
+  font-size: 36px;
+  color: #1e293b;
+  text-align: center;
 }
 
 .home-mobile-img {
   width: 206px;
-}
-
-@media screen and (min-width: 768px) {
-  .home-mobile-img {
-    display: none;
-  }
-}
-
-.home-desktop-img {
-  width: 50%;
-  max-width: 450px;
-  margin-left: 85px;
-}
-
-@media screen and (max-width: 767px) {
-  .home-desktop-img {
-    display: none;
-  }
-}
-
-.home-heading {
-  color: #1e293b;
-  font-family: 'Roboto';
-  font-weight: bold;
-  font-size: 30px;
-  line-height: 1.2;
-  text-align: center;
-}
-
-@media screen and (min-width: 768px) {
-  .home-heading {
-    font-size: 46px;
-    text-align: left;
-  }
 }
 
 .home-description {
@@ -78,15 +40,8 @@
   text-align: center;
 }
 
-@media screen and (min-width: 768px) {
-  .home-description {
-    font-size: 18px;
-    margin-top: 0px;
-    text-align: left;
-  }
-}
-
 .shop-now-button {
+  width: 60%;
   font-size: 14px;
   font-weight: 400;
   font-family: 'Roboto';
@@ -101,9 +56,46 @@
   outline: none;
 }
 
+.home-desktop-img {
+  width: 50%;
+  max-width: 450px;
+  margin-left: 85px;
+}
+
 @media screen and (min-width: 768px) {
+  .home-container {
+    flex-direction: row;
+    justify-content: space-between;
+    padding-top: 50px;
+  }
+
+  .home-content {
+    align-items: flex-start;
+  }
+
+  .home-heading {
+    font-size: 46px;
+    text-align: left;
+  }
+
+  .home-mobile-img {
+    display: none;
+  }
+
+  .home-description {
+    font-size: 18px;
+    margin-top: 0px;
+    text-align: left;
+  }
+
   .shop-now-button {
     width: 150px;
     font-size: 16px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .home-desktop-img {
+    display: none;
   }
 }
